Ajuste a detalle de producto

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -344,7 +344,27 @@ header
     text-align center
     padding 60px 0
 
-/* Projects */
+/* Projects detail */
+.recommendations-detail
+  padding-top 60px
+
+.box-detail
+  .description
+    border-top 1px solid #bababa
+    border-bottom 1px solid #bababa
+    padding 20px 0
+    margin 25px 0
+    position relative
+    &:before
+      content 'Descripción'
+      position absolute
+      top -15px
+      font-size 18px
+      background #fff
+      padding-right 10px
+      font-weight bold
+      color #999
+
 .breadcrumb
   padding 8px 15px
   margin-bottom 20px
@@ -405,7 +425,7 @@ header
   padding: 5px 10px !important
 
 .btn-yellow
-  background #cbae00;
+  background #cbae00
   display inline-block
   padding 10px 15px
   text-transform uppercase
@@ -416,6 +436,24 @@ header
   border-radius 0
   &:hover, &:focus
     background #AE9400
+    display: inline-block
+    padding 10px 15px
+    text-transform uppercase
+    color #fff
+    font-weight 700
+    border-radius 0px
+.btn-orange
+  background #e6b52a
+  display inline-block
+  padding 10px 15px
+  text-transform uppercase
+  color #fff
+  font-weight 700
+  border-radius 5px
+  border none
+  border-radius 0
+  &:hover, &:focus
+    background #c09723
     display: inline-block
     padding 10px 15px
     text-transform uppercase
