--- a/app/css/main.css
+++ b/app/css/main.css
@@ -393,6 +393,26 @@ color
   text-align: center;
   padding: 60px 0;
 }
+.recommendations-detail {
+  padding-top: 60px;
+}
+.box-detail .description {
+  border-top: 1px solid #bababa;
+  border-bottom: 1px solid #bababa;
+  padding: 20px 0;
+  margin: 25px 0;
+  position: relative;
+}
+.box-detail .description:before {
+  content: 'Descripción';
+  position: absolute;
+  top: -15px;
+  font-size: 18px;
+  background: #fff;
+  padding-right: 10px;
+  font-weight: bold;
+  color: #999;
+}
 .breadcrumb {
   padding: 8px 15px;
   margin-bottom: 20px;
@@ -462,6 +482,27 @@ color
 .btn-yellow:hover,
 .btn-yellow:focus {
   background: #ae9400;
+  display: inline-block;
+  padding: 10px 15px;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 0px;
+}
+.btn-orange {
+  background: #e6b52a;
+  display: inline-block;
+  padding: 10px 15px;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 5px;
+  border: none;
+  border-radius: 0;
+}
+.btn-orange:hover,
+.btn-orange:focus {
+  background: #c09723;
   display: inline-block;
   padding: 10px 15px;
   text-transform: uppercase;
