Fix own carrousel

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -27,9 +27,9 @@
             <h1>Te recomendamos</h1>
         </div>
         <div class="owl-carousel owl-theme">
-            <div class="box-default" ng-repeat="outstanding in outstandings">
+            <div class="box-default" ng-repeat="outstanding in outstandings" ng-repeat-owl-carousel carousel-init="Home.carouselInitializer">
                 <div class="box-header">
-                    <a href="#"> <img ng-src="{{ outstanding.urlImages.thumbnails }}" alt=""/></a>
+                    <a ui-sref="project_detail({slug: outstanding.slug})"> <img ng-src="{{ outstanding.urlImages.thumbnails }}" alt=""/></a>
                 </div>
                 <div class="box-container">
                     <h1>{{ outstanding.title }}</h1>
