--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -28,8 +28,8 @@
         </div>
         <div class="owl-carousel owl-theme">
             <div class="box-default" ng-repeat="outstanding in outstandings" ng-repeat-owl-carousel carousel-init="Home.carouselInitializer">
-                <div class="box-header">
-                    <a ui-sref="project_detail({slug: outstanding.slug})"> <img ng-src="{{ outstanding.urlImages.thumbnails }}" alt=""/></a>
+                <div class="box-header item">
+                    <a ui-sref="project_detail({slug: outstanding.slug})"> <img ng-src="{{ outstanding.urlImages.medium }}" alt=""/></a>
                 </div>
                 <div class="box-container">
                     <h1>{{ outstanding.title }}</h1>
