Add xtra image in sports

--- a/app/templates/sports.html
+++ b/app/templates/sports.html
@@ -12,7 +12,7 @@
                         <div class="box-default">
                             <div class="box-header">
                                 <a ui-sref="post_category({slug: sport.slug})"><img
-                                        post-image="{{ sport.urlImages.original }}" alt="{{ sport.name }}"/></a>
+                                        post-image="{{ sport.imgXtra }}" alt="{{ sport.name }}"/></a>
                             </div>
                             <div class="box-container">
                                 <h1>{{ sport.name }}</h1>
