--- a/app/templates/sports.html
+++ b/app/templates/sports.html
@@ -11,7 +11,7 @@
                     <div class="col-md-4" ng-repeat=" sport in Sport.sports">
                         <div class="box-default">
                             <div class="box-header">
-                                <a ui-sref="post_category({slug: sport.slug})"><img
+                                <a ui-sref="category({slug: sport.slug})"><img
                                         post-image="{{ sport.imgXtra }}" alt="{{ sport.name }}"/></a>
                             </div>
                             <div class="box-container">
