--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -1,15 +1,20 @@
-<div class="box-sidebar">
+<div class="box-sidebar" ng-controller="GetQuerySearchCtrl as search">
     <!-- Blog Search -->
     <div class="box-header">
         Busqueda
     </div>
     <div class="input-group">
-        <input type="text" class="form-control">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                <span class="glyphicon glyphicon-search"></span>
-                            </button>
-                        </span>
+        <form class="navbar-form" role="search" ng-submit="search.globalSearch()">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Buscar..." name="query"
+                       ng-model="search.searchTerm" required>
+
+                <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 <div class="box-sidebar">
@@ -19,7 +24,7 @@
     <div class="box-body">
         <ul class="list-group">
             <li class="list-group-item" ng-repeat="outstanding in outstandings">
-                <a ui-sref="project_detail({slug: outstanding.slug})">{{ outstanding.title }}</a>
+                <a ui-sref="product_detail({slug: outstanding.slug})">{{ outstanding.title }}</a>
             </li>
         </ul>
     </div>
