estilo y diseño finalizado

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-9">
-                <h2 class="title">Blog</h2>
+                <div class="col-md-12 title-post">
+                    <h2 class="title">Blog</h2>
+                </div>
 
                 <div class="content-pages" infinite-scroll='Post.getMorePosts()'
                      infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
