--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -1,7 +1,7 @@
 <section id="content-area">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 title-post">
                 <h2 class="title">{{ Post.categoryName }}</h2>
             </div>
         </div>
