--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -97,7 +97,7 @@ body
 /************** main css ******************/
 header
   .navbar-default
-    background #f5f5f5
+    background rgba(0, 0, 0, 0.8)
     height 100px
     border none
     border-radius 0
@@ -106,77 +106,38 @@ header
     box-shadow 0 0 15px rgba(0, 0, 0, 0.43)
     margin-bottom 0
     z-index 9999
+    .navbar-brand
+      padding 5px 15px
     .navbar-nav > li > a
+      color white
       padding 40px 18px
+      font-size 18px
+      font-family 'Roboto', sans-serif
+      font-weight 700
     .navbar-nav > li > a:hover, .navbar-nav > li > a:focus
-      background-color #eeedec
-      color #e50983
-    .main-nav
-      border-left 1px solid #ccc
-      .dropdown:hover .dropdown-toggle
-        background-color #E50983 !important
-        color #eeedec !important
-      .dropdown
-        .user-help
-          right -126px
-          border-top 5px solid #E50983 !important
-          border-top-left-radius 0px
-          border-top-right-radius 0px
-          .dropdown-header
-            font-size 18px
-            font-weight bold
-        .user-log
-          border-top 5px solid #E50983 !important
-          border-top-left-radius 0px
-          border-top-right-radius 0px
-          right -68px
-          min-width 200px
-          .dropdown-header
-            font-size 18px
-            font-weight bold
-        .user-shopping
-          border-top 5px solid #E50983 !important
-          border-top-left-radius 0px
-          border-top-right-radius 0px
-          min-width 250px
-          padding-bottom 0
-          .dropdown-header
-            font-size 16px
-            font-weight bold
-          .list-payment
-            margin 10px 0
-            color #555555 !important
-          .list-total
-            margin 10px 0
-            font-weight bold
-
-    .main-nav > li > a
-      padding 32px 18px
-      color #e50983
-    .main-nav > li > a:hover, .main-nav > li > a:focus
-      background-color transparent
-      color #e50983
+      background-color #9c161d
+      color white
     .navbar-nav
       .dropdown:hover .dropdown-toggle
-        background-color #eeedec
-        color #e50983
+        background-color #9c161d
+        color white
       .dropdown
         .dropdown-menu
-          background-color #eeedec
+          background-color #9c161d
           border none
           -webkit-box-shadow 0px 5px 5px rgba(0, 0, 0, 0.33)
           -moz-box-shadow 0px 5px 5px rgba(0, 0, 0, 0.33)
           box-shadow 0px 5px 5px rgba(0, 0, 0, 0.33)
         .dropdown-menu >  li > a
-          color #8e8e8e
+          color white
           font-size 16px
           padding 10px 15px
         .dropdown-menu >  li > a:hover
-          background transparent
-          color #e50983
+          background rgba(0,0,0,0.4)
+          color white
 
   .logo
-    width 150px
+    width auto
 
 /********************************/
 
@@ -195,17 +156,6 @@ header
 .logo
   margin-top 0
 
-.navbar-nav > li > a
-  font-size: 18px
-  color: #555
-  font-family 'Roboto', sans-serif
-  font-weight 700
-
-.navbar-nav > li > a:hover,
-.navbar-nav > li > a:active,
-.navbar-nav > li > a:focus
-  background none
-
 .slider-area-text
   text-align center
   p
@@ -219,9 +169,14 @@ header
 
 /************** content area default ****************/
 #content-area
-  margin 60px 0px 60px
-  .title
-    color #737373
+  margin 160px 0px 60px
+  .title-post
+    background #9c161d
+    .title
+      color white
+      line-height 40px
+      margin-bottom 0
+      font-size 24px
   .title-p
     color #737373
     font-size 18px
@@ -229,18 +184,27 @@ header
     border: 1px solid #f5f5f5;
   .content-pages
     padding 20px 0
+.gallery
+  padding 20px 0
 
 /************** Home area css ******************/
 
-#section-sports
-  background #172031
+#contact-section
+  background #9c161d
   text-align center
-  h3
+  h1
+    text-align center
+  span
     color white
-    margin-bottom 45px
-  h4
-    margin-top 15px
-    color white
+    letter-spacing 1px
+    font-size 18px
+  .contact
+    border-left 1px solid white
+    a
+      color white
+      font-size 28px
+      line-height 75px
+
 #recommendation
   .title
     padding-bottom 40px
@@ -275,24 +239,30 @@ header
       font-size 22px
       margin 10px 0
   &:hover, &:focus
-    background #e50983
+    background #f5f5f5
     h1,h2
-      color white
+      color #9c161d
+    p
+      color #555
     .comment-area
       .date, .comment
-        color white
+        color #555
 .widgets
-  margin-top 30px
+  margin-top -35px
 .box-sidebar
+  padding-top 20px
   .box-header
-    background #5d5d5d
+    background transparent
     padding 10px
     font-size 20px
-    text-align center
-    color white
+    text-align left
+    padding 10px 0
+    color #878787
   .box-body
     .list-group
       boder-radius 0
+      a
+        color #777
       .list-group-item:first-child
         border-top-left-radius 0px
         border-top-right-radius 0px
@@ -348,6 +318,12 @@ header
 .recommendations-detail
   padding-top 60px
 
+.description-post
+  padding 20px 0
+  p
+    color #555
+    font-size 16px
+
 .box-detail
   .description
     border-top 1px solid #bababa
@@ -384,7 +360,7 @@ header
 /************** footer area css ******************/
 
 #footer_area
-  background #172031
+  background #252323
   padding 30px 0
   color #fff
 
@@ -394,10 +370,10 @@ header
   .footer-links
     color #fff
     &:hover, &:focus
-      color #ff801a
+      color #9c161d
 
   .divider_footer
-    border-top 1px solid #1C263A
+    border-top 1px solid rgba(255,255,255,0.1)
 
   .company_logo
     margin 50px
@@ -423,6 +399,29 @@ header
 /* buttons sizes */
 .btn-sm
   padding: 5px 10px !important
+.btn-search
+  padding 10px 10px
+  background white
+  border-right 1px solid #eee
+  border-top 1px solid #eee
+  border-bottom 1px solid #eee
+
+.btn-red
+  background #9c161d
+  display inline-block
+  padding 10px 15px
+  color #fff
+  font-weight 700
+  border-radius 5px
+  border none
+  border-radius 0
+  &:hover, &:focus
+    background #6b0f14
+    display: inline-block
+    padding 10px 15px
+    color #fff
+    font-weight 700
+    border-radius 0px
 
 .btn-yellow
   background #cbae00
@@ -511,9 +510,15 @@ header
   color #666666
   i
     color #0177B5
+
 .social-media
   color #666666
-  padding 60px 0
+  padding 30px 0
+  .social
+    a
+      color #666666
+      font-size 18px
+      line-height 40px
 
 .phone
   color #666666
@@ -545,7 +550,7 @@ header
   color: #555
   background-color #fff
   background-image none
-  border 5px solid #f5f5f5
+  border 2px solid #f5f5f5
   border-radius 4px
   -webkit-box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
   box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
@@ -557,9 +562,11 @@ header
   box-shadow ease-in-out .15s
 
   &:focus
-    border-color #e50983
+    border-color #9c161d
     outline 0
     -webkit-box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
     box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
 
 
+.owl-nav
+  display none
