--- a/app/css/main.css
+++ b/app/css/main.css
@@ -101,7 +101,7 @@ body {
   }
 }
 header .navbar-default {
-  background: #f5f5f5;
+  background: rgba(0,0,0,0.8);
   height: 100px;
   border: none;
   border-radius: 0;
@@ -111,92 +111,43 @@ header .navbar-default {
   margin-bottom: 0;
   z-index: 9999;
 }
+header .navbar-default .navbar-brand {
+  padding: 5px 15px;
+}
 header .navbar-default .navbar-nav > li > a {
+  color: #fff;
   padding: 40px 18px;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
 }
 header .navbar-default .navbar-nav > li > a:hover,
 header .navbar-default .navbar-nav > li > a:focus {
-  background-color: #eeedec;
-  color: #e50983;
-}
-header .navbar-default .main-nav {
-  border-left: 1px solid #ccc;
-}
-header .navbar-default .main-nav .dropdown:hover .dropdown-toggle {
-  background-color: #e50983 !important;
-  color: #eeedec !important;
-}
-header .navbar-default .main-nav .dropdown .user-help {
-  right: -126px;
-  border-top: 5px solid #e50983 !important;
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-}
-header .navbar-default .main-nav .dropdown .user-help .dropdown-header {
-  font-size: 18px;
-  font-weight: bold;
-}
-header .navbar-default .main-nav .dropdown .user-log {
-  border-top: 5px solid #e50983 !important;
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-  right: -68px;
-  min-width: 200px;
-}
-header .navbar-default .main-nav .dropdown .user-log .dropdown-header {
-  font-size: 18px;
-  font-weight: bold;
-}
-header .navbar-default .main-nav .dropdown .user-shopping {
-  border-top: 5px solid #e50983 !important;
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-  min-width: 250px;
-  padding-bottom: 0;
-}
-header .navbar-default .main-nav .dropdown .user-shopping .dropdown-header {
-  font-size: 16px;
-  font-weight: bold;
-}
-header .navbar-default .main-nav .dropdown .user-shopping .list-payment {
-  margin: 10px 0;
-  color: #555 !important;
-}
-header .navbar-default .main-nav .dropdown .user-shopping .list-total {
-  margin: 10px 0;
-  font-weight: bold;
-}
-header .navbar-default .main-nav > li > a {
-  padding: 32px 18px;
-  color: #e50983;
-}
-header .navbar-default .main-nav > li > a:hover,
-header .navbar-default .main-nav > li > a:focus {
-  background-color: transparent;
-  color: #e50983;
+  background-color: #9c161d;
+  color: #fff;
 }
 header .navbar-default .navbar-nav .dropdown:hover .dropdown-toggle {
-  background-color: #eeedec;
-  color: #e50983;
+  background-color: #9c161d;
+  color: #fff;
 }
 header .navbar-default .navbar-nav .dropdown .dropdown-menu {
-  background-color: #eeedec;
+  background-color: #9c161d;
   border: none;
   -webkit-box-shadow: 0px 5px 5px rgba(0,0,0,0.33);
   -moz-box-shadow: 0px 5px 5px rgba(0,0,0,0.33);
   box-shadow: 0px 5px 5px rgba(0,0,0,0.33);
 }
 header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a {
-  color: #8e8e8e;
+  color: #fff;
   font-size: 16px;
   padding: 10px 15px;
 }
 header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a:hover {
-  background: transparent;
-  color: #e50983;
+  background: rgba(0,0,0,0.4);
+  color: #fff;
 }
 header .logo {
-  width: 150px;
+  width: auto;
 }
 #slider-area {
   background: url("../img/bg.jpg");
@@ -214,17 +165,6 @@ header .logo {
 .logo {
   margin-top: 0;
 }
-.navbar-nav > li > a {
-  font-size: 18px;
-  color: #555;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 700;
-}
-.navbar-nav > li > a:hover,
-.navbar-nav > li > a:active,
-.navbar-nav > li > a:focus {
-  background: none;
-}
 .slider-area-text {
   text-align: center;
 }
@@ -237,10 +177,16 @@ header .logo {
   color: #555;
 }
 #content-area {
-  margin: 60px 0px 60px;
+  margin: 160px 0px 60px;
 }
-#content-area .title {
-  color: #737373;
+#content-area .title-post {
+  background: #9c161d;
+}
+#content-area .title-post .title {
+  color: #fff;
+  line-height: 40px;
+  margin-bottom: 0;
+  font-size: 24px;
 }
 #content-area .title-p {
   color: #737373;
@@ -252,17 +198,28 @@ header .logo {
 #content-area .content-pages {
   padding: 20px 0;
 }
-#section-sports {
-  background: #172031;
+.gallery {
+  padding: 20px 0;
+}
+#contact-section {
+  background: #9c161d;
   text-align: center;
 }
-#section-sports h3 {
-  color: #fff;
-  margin-bottom: 45px;
+#contact-section h1 {
+  text-align: center;
 }
-#section-sports h4 {
-  margin-top: 15px;
+#contact-section span {
   color: #fff;
+  letter-spacing: 1px;
+  font-size: 18px;
+}
+#contact-section .contact {
+  border-left: 1px solid #fff;
+}
+#contact-section .contact a {
+  color: #fff;
+  font-size: 28px;
+  line-height: 75px;
 }
 #recommendation .title {
   padding-bottom: 40px;
@@ -310,32 +267,43 @@ color
 }
 .box-default:hover,
 .box-default:focus {
-  background: #e50983;
+  background: #f5f5f5;
 }
 .box-default:hover h1,
 .box-default:focus h1,
 .box-default:hover h2,
 .box-default:focus h2 {
-  color: #fff;
+  color: #9c161d;
+}
+.box-default:hover p,
+.box-default:focus p {
+  color: #555;
 }
 .box-default:hover .comment-area .date,
 .box-default:focus .comment-area .date,
 .box-default:hover .comment-area .comment,
 .box-default:focus .comment-area .comment {
-  color: #fff;
+  color: #555;
 }
 .widgets {
-  margin-top: 30px;
+  margin-top: -35px;
+}
+.box-sidebar {
+  padding-top: 20px;
 }
 .box-sidebar .box-header {
-  background: #5d5d5d;
+  background: transparent;
   padding: 10px;
   font-size: 20px;
-  text-align: center;
-  color: #fff;
+  text-align: left;
+  padding: 10px 0;
+  color: #878787;
 }
 .box-sidebar .box-body .list-group {
   boder-radius: 0;
+}
+.box-sidebar .box-body .list-group a {
+  color: #777;
 }
 .box-sidebar .box-body .list-group .list-group-item:first-child {
   border-top-left-radius: 0px;
@@ -396,6 +364,13 @@ color
 .recommendations-detail {
   padding-top: 60px;
 }
+.description-post {
+  padding: 20px 0;
+}
+.description-post p {
+  color: #555;
+  font-size: 16px;
+}
 .box-detail .description {
   border-top: 1px solid #bababa;
   border-bottom: 1px solid #bababa;
@@ -430,7 +405,7 @@ color
   width: 100%;
 }
 #footer_area {
-  background: #172031;
+  background: #252323;
   padding: 30px 0;
   color: #fff;
 }
@@ -442,10 +417,10 @@ color
 }
 #footer_area .footer-links:hover,
 #footer_area .footer-links:focus {
-  color: #ff801a;
+  color: #9c161d;
 }
 #footer_area .divider_footer {
-  border-top: 1px solid #1c263a;
+  border-top: 1px solid rgba(255,255,255,0.1);
 }
 #footer_area .company_logo {
   margin: 50px;
@@ -467,6 +442,32 @@ color
 }
 .btn-sm {
   padding: 5px 10px !important;
+}
+.btn-search {
+  padding: 10px 10px;
+  background: #fff;
+  border-right: 1px solid #eee;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+.btn-red {
+  background: #9c161d;
+  display: inline-block;
+  padding: 10px 15px;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 5px;
+  border: none;
+  border-radius: 0;
+}
+.btn-red:hover,
+.btn-red:focus {
+  background: #6b0f14;
+  display: inline-block;
+  padding: 10px 15px;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 0px;
 }
 .btn-yellow {
   background: #cbae00;
@@ -570,7 +571,12 @@ color
 }
 .social-media {
   color: #666;
-  padding: 60px 0;
+  padding: 30px 0;
+}
+.social-media .social a {
+  color: #666;
+  font-size: 18px;
+  line-height: 40px;
 }
 .phone {
   color: #666;
@@ -608,7 +614,7 @@ color
   color: #555;
   background-color: #fff;
   background-image: none;
-  border: 5px solid #f5f5f5;
+  border: 2px solid #f5f5f5;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0);
   box-shadow: inset 0 1px 1px rgba(0,0,0,0);
@@ -620,10 +626,13 @@ color
   box-shadow: ease-in-out 0.15s;
 }
 .form-control:focus {
-  border-color: #e50983;
+  border-color: #9c161d;
   outline: 0;
   -webkit-box-shadow: 0 0 0 9px rgba(0,0,0,0);
   box-shadow: 0 0 0 9px rgba(0,0,0,0);
+}
+.owl-nav {
+  display: none;
 }
 @media only screen and (min-width: 991px) and (max-width: 1024px) {
   .single_blog .comment-area {
