--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -2,37 +2,37 @@
     <div class="row">
         <div class="col-sm-4">
             <div class="company_address">
-                <h2>Información de la empresa</h2>
+                <h2>Contacto</h2>
 
                 <h3>
-                    <a class="footer-links" ui-sref="page({slug: 'acerca-de-blue-mia'})">Acerca de Blue
-                        Mía</a><br/><br/>
-                    <a class="footer-links" ui-sref="page({slug: 'terminos-y-condiciones'})">Términos y
-                        condiciones</a><br/><br/>
-                    <a ui-sref="page({slug: 'aviso-de-privacidad'})" class="footer-links">Aviso de privacidad</a>
+                    <a class="footer-links" ui-sref="page({slug: 'acerca-de-blue-mia'})">Contenedores</a><br/><br/>
+                    <a class="footer-links" ui-sref="page({slug: 'terminos-y-condiciones'})">Carrocerías</a><br/><br/>
+                    <a ui-sref="page({slug: 'aviso-de-privacidad'})" class="footer-links">Dolly</a><br/><br/>
+                    <a ui-sref="page({slug: 'aviso-de-privacidad'})" class="footer-links">Abatibles</a><br/><br/>
+                    <a ui-sref="page({slug: 'aviso-de-privacidad'})" class="footer-links">Jaulas</a>
                 </h3>
             </div>
         </div>
         <div class="col-sm-4">
             <div class="company_address">
-                <h2>Información de la empresa</h2>
+                <h2>Información de contacto</h2>
 
                 <h3>
-                    <a class="footer-links" ui-sref="page({slug: 'envio'})">Envío</a><br/><br/>
-                    <a class="footer-links" ui-sref="page({slug: 'como-comprar'})">¿Cómo comprar?</a><br/><br/>
-                    <a class="footer-links" ui-sref="page({slug: 'pagos'})">Pagos</a>
+                    <a class="footer-links"><i class="fa fa-map-marker"></i> Amadeo Galvez 420 colonia Centro
+                        Sahuayo Michoacán C.P. 59000</a><br/><br/>
+                    <a href="tel:3535328566" class="footer-links"><i class="fa fa-phone"></i> 01 353 532 85
+                        66</a><br/><br/>
+                    <a href="mailto:clientes@remolquesmagu.com" class="footer-links"> <i class="fa fa-envelope"></i>
+                        clientes@remolquesmagu.com</a>
                 </h3>
             </div>
         </div>
         <div class="col-sm-4">
             <div class="company_address">
-                <h2>Información de la empresa</h2>
+                <h2><i class="fa fa-map-marker"></i> Ubicación</h2>
 
-                <h3>
-                    <a class="footer-links" href="#">¿Qué usar para el gym?</a><br/><br/>
-                    <a class="footer-links" href="#">Comodidad ante todo</a><br/><br/>
-                    <a ui-sref="contact" class="footer-links">¿Por qué Blue Mía?</a>
-                </h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3747.8610131352357!2d-102.71972298560834!3d20.056263525640112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842ee354c1bb5e37%3A0x7e773e492e6320de!2sAmadeo+G%C3%A1lvez%2C+Centro+Uno%2C+59000+Sahuayo+de+Morelos%2C+Mich.!5e0!3m2!1ses-419!2smx!4v1463769408199"
+                        width="100%" height="120" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
