--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -4,13 +4,13 @@
         Busqueda
     </div>
     <div class="input-group">
-        <form class="navbar-form" role="search" ng-submit="search.globalSearch()">
+        <form class="navbar-form no-padding" role="search" ng-submit="search.globalSearch()">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Buscar..." name="query"
                        ng-model="search.searchTerm" required>
 
                 <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                    <button class="btn btn-search" type="submit"><i class="glyphicon glyphicon-search"></i>
                     </button>
                 </div>
             </div>
@@ -19,8 +19,9 @@
 </div>
 <div class="box-sidebar">
     <div class="box-header">
-        Prendas destacadas
+        Lo más destacado
     </div>
+    <!-- productos destacados -->
     <div class="box-body">
         <ul class="list-group">
             <li class="list-group-item" ng-repeat="outstanding in outstandings">
@@ -35,10 +36,13 @@
     </div>
     <div class="box-body">
         <ul class="list-group">
-            <li class="list-group-item"><a href="mailto:info@bluemia.com.mx">info@bluemia.com.mx</a></li>
-            <li class="list-group-item"><a href="tel:+1800229933">1800229933</a></li>
-            <li class="list-group-item"><a href="#">Dirección 1</a></li>
-
+            <li class="list-group-item"><a href="#"> <i class="fa fa-map-marker"></i> Amadeo Galvez 420, colonia
+                Centro, Sahuayo Michoacán
+                C.P. 59000
+            </a></li>
+            <li class="list-group-item"><a href="mailto:clientes@remolquesmagu.com"><i class="fa fa-envelope"></i> clientes@remolquesmagu.com</a></li>
+            <li class="list-group-item"><a href="tel:013535328566"><i class="fa fa-phone"></i> 01 353 532 85 66</a></li>
+            <li class="list-group-item"><a href="https://www.facebook.com/Remolques-y-Carrocerias-MAGU-157550077637501/?fref=ts"><i class="fa fa-facebook-square"></i> Facebook</a></li>
         </ul>
     </div>
 </div>
