--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -2,7 +2,7 @@
     <div class="container" infinite-scroll='Search.getMorePosts()'
          infinite-scroll-disabled='Search.busy || !Search.next || Search.loadPosts'>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 title-post">
                 <h2 class="title">Resultados de la busqueda: {{ Search.searchTerm }}</h2>
             </div>
         </div>
