--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-9">
-                <h2 class="title">{{ Post.detail.title }}</h2>
+                <div class="col-md-12 title-post">
+                    <h2 class="title">{{ Post.detail.title }}</h2>
+                </div>
 
                 <img ng-src="{{ Post.detail.urlImages.medium }}" alt="{{ Post.detail.title }}"/>
 
