--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -95,57 +95,26 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .navbar-default .navbar-collapse, .navbar-default .navbar-form
+    border none
+  .navbar-nav
+    background white
+    margin-top 30px
+  header .navbar-default
+    background black
+  .navbar-fixed-top
+    position relative
   h2.title-outstanding
     font-size 16px !important
     padding 20px 10px !important
   .post-out
     display none
+  #contact-section .contact
+    border-left 1px solid transparent
 
-  header
-    .mainmenu
-      padding-top 10px
-      position absolute
-      background #EBEBEB !important
-      /*padding 25px 0 0*/
-      top 0px
-      left 0
-      right 0
-      z-index 99999
-
-  .navbar
-    border none
-    background #EBEBEB
-    margin-bottom 0px
-  header.smaller
-    height 250px
-    box-shadow none
-    .mainmenu
-      padding-top 0px
-      box-shadow 0 0 10px #999
-
-  header
-    width 100%
-    height 210px
-    overflow hidden
-    position fixed
-    top 0
-    left 0
-    z-index 999
-    background-color transparent
-    -webkit-transition height 0.3s
-    -moz-transition height 0.3s
-    -ms-transition height 0.3s
-    -o-transition height 0.3s
-    transition height 0.3s
-
-    header.smaller h1#logo
-      width 150px
-      height 75px
-      line-height: 75px
-      font-size 30px
-
-    header.smaller nav a
-      line-height 75px
+  header .navbar-default .navbar-nav > li > a
+    color #555
+    padding 10px 15px
 
   #content-area
     margin 160px 0px 60px
@@ -183,7 +152,6 @@
   .logo
     margin-top 0
     width 180px
-    margin-top -5px
 
   #header_area
     padding-top 5px
@@ -192,7 +160,8 @@
 
 
   .navbar-toggle
-    background-color #4ECB8C
+    margin-top 25px
+    background-color transparent
 
 
   .header_area_text h2
