--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,16 +1,12 @@
-<div class="carousel slide">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="img/slider.jpg" alt="...">
-        </div>
+        <uib-carousel>
+            <uib-slide ng-repeat="slide in Home.mainSlider">
+                <div class="item"><a post-link="{ link: {url: slide.link, target: '_blank'} }">
+                    <img ng-src="{{ slide.urlImages.original }}"></a>
+                </div>
+            </uib-slide>
+        </uib-carousel>
     </div>
 </div>
 <section id="contact-section" class="section_padding">
@@ -23,7 +19,8 @@
             <span>clientes@remolquesmagu.com</span>
         </div>
         <div class="col-md-3 col-sm-4 contact">
-            <a href="https://www.facebook.com/Remolques-y-Carrocerias-MAGU-157550077637501/?fref=ts"><i class="fa fa-facebook-square"></i> Facebook</a>
+            <a href="https://www.facebook.com/Remolques-y-Carrocerias-MAGU-157550077637501/?fref=ts"><i
+                    class="fa fa-facebook-square"></i> Facebook</a>
         </div>
     </div>
 </section>
@@ -35,14 +32,14 @@
             <h1> Nuestros productos </h1>
         </div>
         <div class="owl-carousel owl-theme">
-            <div class="box-default" ng-repeat="outstanding in outstandings" ng-repeat-owl-carousel
-                 carousel-init="Home.carouselInitializer" ng-if="outstanding">
+            <div class="box-default" ng-repeat="product in Home.products" ng-repeat-owl-carousel
+                 carousel-init="Home.carouselInitializer" ng-if="product">
                 <div class="box-header item">
-                    <a ui-sref="product_detail({slug: outstanding.slug})"> <img
-                            ng-src="{{ outstanding.urlImages.medium }}" alt="{{ outstanding.title }}"/></a>
+                    <a ui-sref="product_detail({slug: product.slug})"> <img
+                            ng-src="{{ product.urlImages.medium }}" alt="{{ product.title }}"/></a>
                 </div>
                 <div class="box-container">
-                    <h1>{{ outstanding.title }}</h1>
+                    <h1>{{ product.title }}</h1>
                 </div>
             </div>
         </div>
