ajuste de estilo en responsivo de sidebar y slider

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -729,6 +729,9 @@ color
   }
 }
 @media only screen and (max-width: 767px) {
+  .navbar-form {
+    padding: 0 15px !important;
+  }
   .navbar-default .navbar-collapse,
   .navbar-default .navbar-form {
     border: none;
@@ -761,7 +764,7 @@ color
     margin: 160px 0px 60px;
   }
   .content-blog {
-    margin: 0px 0px 60px !important;
+    margin: 25px 0px 60px !important;
   }
   #slider-area {
     padding-bottom: 300px;
