--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -95,6 +95,8 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .navbar-form
+    padding 0 15px !important
   .navbar-default .navbar-collapse, .navbar-default .navbar-form
     border none
   .navbar-nav
@@ -119,7 +121,7 @@
   #content-area
     margin 160px 0px 60px
   .content-blog
-    margin 0px 0px 60px !important
+    margin 25px 0px 60px !important
   #slider-area
     padding-bottom 300px
 
