--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,7 @@
         <uib-carousel>
             <uib-slide ng-repeat="slide in Home.mainSlider">
                 <div class="item"><a post-link="{ link: {url: slide.link, target: '_blank'} }">
-                    <img ng-src="{{ slide.urlImages.original }}"></a>
+                    <img width="100%" ng-src="{{ slide.urlImages.original }}"></a>
                 </div>
             </uib-slide>
         </uib-carousel>
