ajuste de estilo

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -172,6 +172,7 @@ header
   margin 160px 0px 60px
   .title-post
     background #9c161d
+    clear both
     .title
       color white
       line-height 40px
