--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-9">
-                <h2 class="title">{{ Page.detail.title }}</h2>
+                <div class="col-md-12 title-post">
+                    <h2 class="title">{{ Page.detail.title }}</h2>
+                </div>
 
                 <img ng-src="{{ Page.detail.urlImages.medium }}" alt="{{ Page.detail.title }}"/>
 
