ajustes en template e single

--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -95,6 +95,16 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .widgets
+    margin-top -35px
+    clear both
+  .box-sidebar
+    padding-top 20px
+    clear both
+    .box-header
+      clear both
+  .content-post
+    margin 25px 0
   .navbar-form
     padding 0 15px !important
   .navbar-default .navbar-collapse, .navbar-default .navbar-form
