--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -62,6 +62,12 @@ body
   color white !important
 
 /************** Grid css******************/
+
+.content-post
+  margin 80px 0
+
+.a-card
+  margin 10px
 .deckgrid[deckgrid]::before
   content '3 .column.size-1-3'
   font-size 0
@@ -187,6 +193,7 @@ header
     padding 20px 0
 .gallery
   padding 20px 0
+  clear both
 
 /************** Home area css ******************/
 
