--- a/app/css/main.css
+++ b/app/css/main.css
@@ -59,6 +59,12 @@ body {
 .white {
   color: #fff !important;
 }
+.content-post {
+  margin: 80px 0;
+}
+.a-card {
+  margin: 10px;
+}
 .deckgrid[deckgrid]::before {
   content: '3 .column.size-1-3';
   font-size: 0;
@@ -201,6 +207,7 @@ header .logo {
 }
 .gallery {
   padding: 20px 0;
+  clear: both;
 }
 #contact-section {
   background: #9c161d;
@@ -730,6 +737,20 @@ color
   }
 }
 @media only screen and (max-width: 767px) {
+  .widgets {
+    margin-top: -35px;
+    clear: both;
+  }
+  .box-sidebar {
+    padding-top: 20px;
+    clear: both;
+  }
+  .box-sidebar .box-header {
+    clear: both;
+  }
+  .content-post {
+    margin: 25px 0;
+  }
   .navbar-form {
     padding: 0 15px !important;
   }
