--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,26 +1,72 @@
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div id="carousel-home" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-        <uib-carousel>
-            <uib-slide ng-repeat="slide in Home.mainSlider">
-                <div class="item"><a post-link="{ link: {url: slide.link, target: '_blank'} }">
-                    <img width="100%" ng-src="{{ slide.urlImages.original }}"></a>
+        <div class="item active">
+            <img width="100%" src="img/slide.jpg" alt="...">
+
+            <div class="carousel-caption">
+                <div class="col-md-12">
+                    <div class="col-md-7 text"></div>
+                    <div class="col-md-5">
+                        <form class="box-mail">
+                            <h4>Contáctanos y pregunta por nuestros planes</h4>
+
+                            <div class="form-group">
+                                <input type="name" class="form-control" id="exampleInputEmail1" placeholder="Nombre">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <input type="number" class="form-control" id="phone"
+                                       placeholder="Teléfono">
+                            </div>
+                            <div class="form-group">
+                                <select class="form-control">
+                                    <option>Fraccionamiento de interés</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    <option>5</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control" name="text" id="" cols="100%" rows="6"
+                                          placeholder="Comentarios"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-orange">Enviar</button>
+                        </form>
+                    </div>
                 </div>
-            </uib-slide>
-        </uib-carousel>
+            </div>
+        </div>
     </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-home" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-home" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 <section id="contact-section" class="section_padding">
     <div class="container">
-        <div class="col-md-4 col-sm-4">
-            <h1 class="white">Contáctanos</h1>
+        <div class="col-md-8 col-sm-8">
+            <h3 class="white">Tú Jóven que estás trabajando o estudiando, contamos con
+                los mejores planes para ti; comienza a construir tu futuro.</h3>
         </div>
         <div class="col-md-4 col-sm-4">
-            <h1 class="white">01 353 532 85 66</h1>
-            <span>clientes@remolquesmagu.com</span>
-        </div>
-        <div class="col-md-3 col-sm-4 contact">
-            <a href="https://www.facebook.com/Remolques-y-Carrocerias-MAGU-157550077637501/?fref=ts"><i
-                    class="fa fa-facebook-square"></i> Facebook</a>
+            <a href="#" class="btn btn-white-clear"> Ver planes</a>
         </div>
     </div>
 </section>
